Fix group name overflow in widget

--- a/app/styles/pages/_groups.scss
+++ b/app/styles/pages/_groups.scss
@@ -1139,6 +1139,10 @@ $primary: #00cc99;
     font-family: "Open Sans",sans-serif;
     font-size: 14px;
     line-height: 25px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-right: 20px;
   }
   .unread-counter {
     position: absolute;
